--- a/projects/repair-it/src/index.html
+++ b/projects/repair-it/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>RepairIt</title>
-  <base href="/">
+  <base href="./">
   <meta name="description" content="Sony and Casio authorized serivice center for Watch, Calculator, LCD, LED, Camera, Musical Instruments.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
