--- a/projects/repair-it/src/index.html
+++ b/projects/repair-it/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Service Karao</title>
   <base href="./">
-  <meta name="description" content="Sony and Casio authorized serivice center for Watch, Calculator, LCD, LED, Camera, Musical Instruments.">
+  <meta name="description" content="Sony and Casio authorized service center for Watch, Calculator, LCD, LED, Camera, Musical Instruments.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -12,6 +12,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
 </head>
 <body style="margin:0px;">
+  <div style="position: absolute;left: -9999px;">Repair, Service Center, Watch, Calculator, LCD, LED, Camera, 
+    Musical Instruments, Sony, Casio, Sony Authorized Service Center, Casio Authorized Service Center</div>
   <app-root></app-root>
 </body>
 </html>
