--- a/projects/capital-chowringhee/src/index.html
+++ b/projects/capital-chowringhee/src/index.html
@@ -11,7 +11,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
 </head>
-<body style="margin:0px;overflow-x: hidden;">
+<body>
   <app-root></app-root>
 </body>
 </html>
