--- a/projects/capital-chowringhee/src/index.html
+++ b/projects/capital-chowringhee/src/index.html
@@ -13,7 +13,9 @@
 </head>
 <body>
   <div style="position: absolute;left: -9999px;">
-      Watch, Calculator, LCD, LED, Camera, Smartphones
+      Calculator, LCD, LED, Camera, DSLR, Smartphones, AC, A.C, Refrigerator, Fridge, Audio Systems, Speakers,
+      Bluetooth Speakers, Capital Chowringhee, Capital Electronics, Capital, Electronics, Washing Machine, 
+      Home Appliances, Mixer, Juicer, Grinder
   </div>
   <app-root></app-root>
 </body>
