--- a/projects/thunder-api/public/index.html
+++ b/projects/thunder-api/public/index.html
@@ -1,15 +1,14 @@
 <!doctype html>
 <html lang="en">
-
 <head>
-  <title>Juniper Cortana Analytics</title>
+  <meta charset="utf-8">
+  <title>Eshop</title>
   <base href="/">
-  <meta charset="UTF-8">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="stylesheet" href="styles.42cd17eba14d6da07348.css"></head>
 <body>
-  <div>Juniper Cortana Analytics portal1</div>
-</body>
-
+  <app-root></app-root>
+<script type="text/javascript" src="runtime.fae7233144b4ad5cdd46.js"></script><script type="text/javascript" src="polyfills.23b58980b2e026efb81d.js"></script><script type="text/javascript" src="main.2983712bee813f85d6e2.js"></script></body>
 </html>
